Removed <br> tag based on automation test

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </nav>
 
         <h1 class="header__title">
-          <span class="header__span-accent">Speciality coffee</span><br />
+          <span class="header__span-accent">Speciality coffee</span>
           in the Practicum Library
         </h1>
         <p class="header__description">
