--- a/index.html
+++ b/index.html
@@ -249,7 +249,9 @@
       </section>
 
       <section id="about" class="about">
-        <h2 class="about__title">About the <br />coffee shop</h2>
+        <h2 class="about__title">
+          <span class="about__title">About the </span>coffee shop
+        </h2>
         <div class="about__content">
           <p class="about__paragraph">
             Our coffee shop is located in the Practicum Library's hall. It
