--- a/index.html
+++ b/index.html
@@ -249,9 +249,7 @@
       </section>
 
       <section id="about" class="about">
-        <h2 class="about__title">
-          <span class="about__title">About the </span>coffee shop
-        </h2>
+        <h2 class="about__title"><span>About the </span>coffee shop</h2>
         <div class="about__content">
           <p class="about__paragraph">
             Our coffee shop is located in the Practicum Library's hall. It
@@ -272,15 +270,12 @@
 
       <footer class="footer" id="footer">
         <div class="footer__content">
-          <div class="footer__content_type_logo">
-            <img
-              src="./images/logo_practicum.svg"
-              alt="Practicum Library Logo"
-              class="footer__logo"
-            />
-          </div>
-
-          <div class="footer__content_type_social">
+          <img
+            src="./images/logo_practicum.svg"
+            alt="Practicum Library Logo"
+            class="footer__logo"
+          />
+          <div class="footer__content footer__content_type_social">
             <h5 class="footer__social-heading">Social media</h5>
             <ul class="footer__list">
               <li class="footer__list-item">
