Checkboz size changed

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <title>Practicum Coffee Shop</title>
     <link rel="stylesheet" href="./pages/index.css" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -56,16 +56,16 @@
 
         <div class="header__footer">
           <div class="header__paragraph">
-            <div class="header__paragraph-title">Hours:</div>
-            <div class="header__paragraph-hours">
+            <div class="header__paragraph header__paragraph-title">Hours:</div>
+            <div class="header__paragraph header__paragraph-hours">
               Monday – Friday (10:00 – 19:00)
             </div>
-            <div class="header__paragraph-hours">
+            <div class="header__paragraph header__paragraph-hours">
               Saturday – Sunday (11:00 – 18:00)
             </div>
           </div>
 
-          <div class="header__paragraph-address">
+          <div class="header__paragraph header__paragraph-address">
             200 Success Avenue, The Town of Practicum
           </div>
         </div>
@@ -292,7 +292,7 @@
                 <a href="#" class="footer__social-link">
                   <img
                     src="./images/instagram_white.svg"
-                    alt="Facebook"
+                    alt="Instagram"
                     class="footer__social-icon"
                   />Instagram
                 </a>
