--- a/index.html
+++ b/index.html
@@ -212,11 +212,13 @@
                 id="no_of_guests"
                 name="no_of_guests"
                 placeholder="1-8"
+                min="1"
+                max="8"
                 required
               />
               <label for="date" class="form__label">Date & time *</label>
               <input
-                type="number"
+                type="date"
                 class="form__input"
                 id="date"
                 name="date"
