--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             alt="Practicum Coffee Shop Logo"
             class="logo"
           />
-          <div class="nav__link">
+          <div class="nav__links">
             <a href="#menu" class="nav__link">Menu</a>
             <a href="#recipes" class="nav__link">Recipes</a>
             <a href="#reservation" class="nav__link">Book a table</a>
@@ -55,144 +55,135 @@
         />
 
         <div class="header__footer">
-          <div class="header__paragraph">
-            <div class="header__paragraph header__paragraph-title">Hours:</div>
-            <div class="header__paragraph header__paragraph-hours">
-              Monday – Friday (10:00 – 19:00)
-            </div>
-            <div class="header__paragraph header__paragraph-hours">
-              Saturday – Sunday (11:00 – 18:00)
-            </div>
+          <div class="header__hours">
+            <p class="header__paragraph">Hours:</p>
+            <p class="header__paragraph">Monday – Friday (10:00 – 19:00)</p>
+            <p class="header__paragraph">Saturday – Sunday (11:00 – 18:00)</p>
           </div>
-
-          <div class="header__paragraph header__paragraph-address">
+          <p class="header__paragraph">
             200 Success Avenue, The Town of Practicum
-          </div>
+          </p>
         </div>
       </header>
 
-      <section id="menu" class="menu">
-        <h2 class="menu__title">Menu</h2>
-        <p class="menu__subtitle">
-          We brew coffee from locally roasted, Fairtrade certified beans and use
-          biodegradable cups. All teas from our collection are $2/cup.
-        </p>
+      <div class="main">
+        <section id="menu" class="menu">
+          <h2 class="menu__title">Menu</h2>
+          <p class="menu__subtitle">
+            We brew coffee from locally roasted, Fairtrade certified beans and
+            use biodegradable cups. All teas from our collection are $2/cup.
+          </p>
 
-        <div class="menu__cards">
-          <div class="card">
-            <h4 class="card__title">Filter</h4>
-            <ul class="card__list">
-              <li class="card__list-item">
-                <span class="card__list-divider">Regular (12 oz)</span> $1
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Large (16 oz)</span> $1.25
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">XL (20 oz)</span> $1.5
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider"
-                  >Party-size (24 oz, decaf)</span
-                >
-                $1.75
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Iced Coffee (16 oz)</span>
-                $1.25
-              </li>
+          <div class="menu__cards">
+            <article class="card">
+              <h3 class="card__title">Filter</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  <span class="card__list-divider">Regular (12 oz)</span> $1
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Large (16 oz)</span> $1.25
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">XL (20 oz)</span> $1.5
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider"
+                    >Party-size (24 oz, decaf)</span
+                  >
+                  $1.75
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Iced Coffee (16 oz)</span>
+                  $1.25
+                </li>
+              </ul>
+            </article>
+
+            <article class="card">
+              <h3 class="card__title">Espresso</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  <span class="card__list-divider">Macchiato</span> $2.25
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Cortado</span> $2.5
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Mocha</span> $3
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider"
+                    >Sunrise in the Bay Area (decaf)</span
+                  >$10
+                </li>
+              </ul>
+            </article>
+
+            <article class="card">
+              <h3 class="card__title">Baked Goods</h3>
+              <ul class="card__list">
+                <li class="card__list-item">
+                  <span class="card__list-divider">Almond Croissant </span> $2
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Banana Bread</span> $1.75
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Key Lime Pie </span> $3
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Blue Velvet Cake</span> $3.75
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Web Cookie </span> $2
+                </li>
+                <li class="card__list-item">
+                  <span class="card__list-divider">Fresh Bug’uette</span> $0.25
+                </li>
+              </ul>
+            </article>
+          </div>
+        </section>
+
+        <section id="recipes" class="recipes">
+          <h2 class="recipes__title">Recipes</h2>
+          <p class="recipes__subtitle">
+            Check out some recipes we've collected for your home-brewing
+            convenience:
+          </p>
+          <div class="recipes__videos">
+            <ul>
+              <iframe
+                class="recipes__iframe"
+                id="ytplayer1"
+                src="https://www.youtube.com/embed/j6VlT_jUVPc"
+                allowfullscreen
+              >
+              </iframe>
+              <div class="recipes__video-caption">
+                Aeropress recipe<span> ˜5 min</span>
+              </div>
+            </ul>
+
+            <ul>
+              <iframe
+                class="recipes__iframe"
+                id="ytplayer2"
+                src="https://www.youtube.com/embed/st571DYYTR8"
+                allowfullscreen
+              >
+              </iframe>
+              <div class="recipes__video-caption">
+                French press recipe<span>˜15 min</span>
+              </div>
             </ul>
           </div>
+        </section>
 
-          <div class="card">
-            <h4 class="card__title">Espresso</h4>
-            <ul class="card__list">
-              <li class="card__list-item">
-                <span class="card__list-divider">Macchiato</span> $2.25
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Cortado</span> $2.5
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Mocha</span> $3
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider"
-                  >Sunrise in the Bay Area (decaf)</span
-                >$10
-              </li>
-            </ul>
-          </div>
-
-          <div class="card">
-            <h4 class="card__title">Baked Goods</h4>
-            <ul class="card__list">
-              <li class="card__list-item">
-                <span class="card__list-divider">Almond Croissant </span> $2
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Banana Bread</span> $1.75
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Key Lime Pie </span> $3
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Blue Velvet Cake</span> $3.75
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Web Cookie </span> $2
-              </li>
-              <li class="card__list-item">
-                <span class="card__list-divider">Fresh Bug’uette</span> $0.25
-              </li>
-            </ul>
-          </div>
-        </div>
-      </section>
-
-      <section id="recipes" class="recipes">
-        <h3 class="recipes__title">Recipes</h3>
-        <p class="recipes__subtitle">
-          Check out some recipes we've collected for your home-brewing
-          convenience:
-        </p>
-        <div class="recipes__videos">
-          <div class="recipes__iframe">
-            <iframe
-              id="ytplayer1"
-              width="480"
-              height="273"
-              src="https://www.youtube.com/embed/j6VlT_jUVPc"
-              style="border: none"
-              allowfullscreen
-            >
-            </iframe>
-            <div class="recipes__video-caption">
-              Aeropress recipe<span> ˜5 min</span>
-            </div>
-          </div>
-
-          <div class="recipes__iframe">
-            <iframe
-              id="ytplayer2"
-              width="480"
-              height="273"
-              src="https://www.youtube.com/embed/st571DYYTR8"
-              style="border: none"
-              allowfullscreen
-            >
-            </iframe>
-            <div class="recipes__video-caption">
-              French press recipe<span>˜15 min</span>
-            </div>
-          </div>
-        </div>
-      </section>
-
-      <section id="reservation" class="reservation">
-        <h2 class="reservation__title">Book a table</h2>
-        <div class="reservation__form">
-          <form class="form">
+        <section id="reservation" class="reservation">
+          <h2 class="reservation__title">Book a table</h2>
+          <form class="form reservation__form">
             <fieldset class="form__fieldset">
               <label for="name" class="form__label">Name *</label>
               <input
@@ -235,41 +226,44 @@
               />
               <button type="submit" class="form__button">Book a table</button>
               <div class="form__terms">
-                <label for="terms" class="form__label">
+                <label
+                  for="terms"
+                  class="form__label form__label_type_checkbox"
+                >
                   <input
                     type="checkbox"
                     name="terms"
                     id="terms"
-                    value=""
                     class="form__checkbox"
+                    required
                   />
                   I agree with the terms of use
                 </label>
               </div>
             </fieldset>
           </form>
-        </div>
-      </section>
+        </section>
 
-      <section id="about" class="about">
-        <h2 class="about__title"><span>About the </span>coffee shop</h2>
-        <div class="about__content">
-          <p class="about__paragraph">
-            Our coffee shop is located in the Practicum Library's hall. It
-            features 6 tables and free WiFi.
-          </p>
-          <p class="about__paragraph">
-            Our main mission is keeping guests cozy and energized.
-          </p>
-          <p class="about__paragraph">
-            Besides that, we try to reduce our environmental impact — so we
-            don't sell single-use cups. But you can buy one of our reusable
-            cups!
-          </p>
-        </div>
-        <div class="about__circle"></div>
-        <div class="about__circle about__circle_animation_blurred"></div>
-      </section>
+        <section id="about" class="about">
+          <h2 class="about__title"><span>About the </span>coffee shop</h2>
+          <div class="about__content">
+            <p class="about__paragraph">
+              Our coffee shop is located in the Practicum Library's hall. It
+              features 6 tables and free WiFi.
+            </p>
+            <p class="about__paragraph">
+              Our main mission is keeping guests cozy and energized.
+            </p>
+            <p class="about__paragraph">
+              Besides that, we try to reduce our environmental impact — so we
+              don't sell single-use cups. But you can buy one of our reusable
+              cups!
+            </p>
+          </div>
+          <div class="about__circle"></div>
+          <div class="about__circle about__circle_animation_blurred"></div>
+        </section>
+      </div>
 
       <footer class="footer" id="footer">
         <div class="footer__content">
@@ -303,7 +297,7 @@
             </ul>
           </div>
         </div>
-        <p class="footer__copyrights">© 2022 Sarah</p>
+        <p class="footer__copyright">© 2022 Sarah</p>
       </footer>
     </div>
   </body>
