Changes made as per reviewer's feedback

--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
               <div class="form__terms">
                 <label
                   for="terms"
-                  class="form__label form__label_type_checkbox"
+                  class="form__label form__label_type-checkbox"
                 >
                   <input
                     type="checkbox"
@@ -245,7 +245,7 @@
         </section>
 
         <section id="about" class="about">
-          <h2 class="about__title"><span>About the </span>coffee shop</h2>
+          <h2 class="about__title">About the coffee shop</h2>
           <div class="about__content">
             <p class="about__paragraph">
               Our coffee shop is located in the Practicum Library's hall. It
