Changes made as per reviewer's feedback

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
             convenience:
           </p>
           <div class="recipes__videos">
-            <ul>
+            <div class="recipes__video">
               <iframe
                 class="recipes__iframe"
                 id="ytplayer1"
@@ -164,9 +164,9 @@
               <div class="recipes__video-caption">
                 Aeropress recipe<span> ˜5 min</span>
               </div>
-            </ul>
+            </div>
 
-            <ul>
+            <div class="recipes__video">
               <iframe
                 class="recipes__iframe"
                 id="ytplayer2"
@@ -177,7 +177,7 @@
               <div class="recipes__video-caption">
                 French press recipe<span>˜15 min</span>
               </div>
-            </ul>
+            </div>
           </div>
         </section>
 
