--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         </div>
       </header>
 
-      <div class="main">
+      <main>
         <section id="menu" class="menu">
           <h2 class="menu__title">Menu</h2>
           <p class="menu__subtitle">
@@ -161,9 +161,9 @@
                 allowfullscreen
               >
               </iframe>
-              <div class="recipes__video-caption">
+              <p class="recipes__video-caption">
                 Aeropress recipe<span> ˜5 min</span>
-              </div>
+              </p>
             </div>
 
             <div class="recipes__video">
@@ -174,9 +174,9 @@
                 allowfullscreen
               >
               </iframe>
-              <div class="recipes__video-caption">
+              <p class="recipes__video-caption">
                 French press recipe<span>˜15 min</span>
-              </div>
+              </p>
             </div>
           </div>
         </section>
@@ -263,7 +263,7 @@
           <div class="about__circle"></div>
           <div class="about__circle about__circle_animation_blurred"></div>
         </section>
-      </div>
+      </main>
 
       <footer class="footer" id="footer">
         <div class="footer__content">
